@@ -18,6 +18,10 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-11-05  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/ia64/logops_n.asm: New file.
+
 2003-11-05  Kevin Ryde  <kevin@swox.se>
 
 	* mpfr/*: Update to mpfr-2-0-2-branch 2003-11-05.
